--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <td>Four</td>
       </tr>
     </table>
-    <a href="personal.html"></a>
+    <a href="https://github.com/Muthu2512/CV/blob/main/personal.html"></a>
 </body>
 </html>
