--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HTML Challenge</h1>
-    <hr>
-    <a href="https://developer.mozilla.org/en-US/"></a>
-    <table>
-      <tr>
-        <td>One</td>
-        <td>Two</td>
-      </tr>
-      <tr>
-    <td>Three</td>
-    <td>Four</td>
-      </tr>
-    </table>
-    <a href="https://github.com/Muthu2512/CV/blob/main/personal.html"></a>
+    <a href="https://github.com/Muthu2512/CV/blob/main/personal.html">CV</a>
 </body>
 </html>
